my-app/my-service-chart/my-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: cilium
  rules:
    - host: artur.nkube.napet.dyn.nesc.nokia.net
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: http-echo-service
                port:
                  number: 80
  tls:
    - hosts:
        - artur.nkube.napet.dyn.nesc.nokia.net
      secretName: my-tls-secret
